--- a/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
+++ b/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
@@ -520,16 +520,9 @@ spec:
 apiVersion: v1
 kind: query
 spec:
-<<<<<<< HEAD
   name: Get applications hogging memory
   platforms: macOS, Linux, Windows
-  description:
-  query: SELECT * FROM mounts m, disk_encryption d WHERE m.path= "/" AND m.device = d.name AND d.encrypted = 0;
-=======
-  name: Get running docker containers
-  platforms: macOS, Linux
-  description: Returns the running Docker containers.
-  query: SELECT id, name, image, image_id, state, status FROM docker_containers WHERE state = "running";
->>>>>>> 6624a9dfefb766f278001a7eb063c2eb9c24cf29
+  description: Returns top 10 applications or processes hogging memory the most.
+  query: SELECT pid, name, ROUND((total_size * '10e-7'), 2) AS memory_used FROM processes ORDER BY total_size DESC LIMIT 10;
   purpose: Informational
   contributors: DominusKelvin
