--- a/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
+++ b/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
@@ -520,6 +520,16 @@ spec:
 apiVersion: v1
 kind: query
 spec:
+  name: Get running docker containers
+  platforms: macOS, Linux
+  description: Returns the running Docker containers.
+  query: SELECT id, name, image, image_id, state, status FROM docker_containers WHERE state = "running";
+  purpose: Informational
+  contributors: DominusKelvin
+---
+apiVersion: v1
+kind: query
+spec:
   name: Get Mac and Linux machines with unencrypted primary disks.
   platforms: macOS, Linux
   description:
