--- a/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
+++ b/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
@@ -530,7 +530,7 @@ spec:
 apiVersion: v1
 kind: query
 spec:
-  name: Get Mac and Linux machines with unencrypted primary disks.
+  name: Get Mac and Linux machines with unencrypted primary disks
   platforms: macOS, Linux
   description:
   query: SELECT * FROM mounts m, disk_encryption d WHERE m.path= "/" AND m.device = d.name AND d.encrypted = 0;
