--- a/cmd/fleetctl/testdata/expectedHostDetailResponseYaml.yml
+++ b/cmd/fleetctl/testdata/expectedHostDetailResponseYaml.yml
@@ -43,6 +43,7 @@ spec:
       id: 1
       description: "Some description"
       name: query1
+      platforms: ""
       query: select 1 from osquery_info where start_time > 1;
       resolution: "Some resolution"
       response: passes
@@ -55,6 +56,7 @@ spec:
       id: 2
       description: ""
       name: query2
+      platforms: ""
       query: select 1 from osquery_info where start_time > 1;
       response: fails
       team_id: null
