fix: remove period from get running docker containers query description

--- a/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
+++ b/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
@@ -520,6 +520,16 @@ spec:
 apiVersion: v1
 kind: query
 spec:
+  name: Get running docker containers
+  platforms: macOS, Linux
+  description: Returns the running Docker containers
+  query: SELECT id, name, image, image_id, state, status FROM docker_containers WHERE state = "running";
+  purpose: Informational
+  contributors: DominusKelvin
+---
+apiVersion: v1
+kind: query
+spec:
   name: Get applications hogging memory
   platforms: macOS, Linux, Windows
   description: Returns top 10 applications or processes hogging memory the most.
