--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,13 +78,21 @@ jobs:
         make
 
     - name: Run E2E Tests
+      id: e2e
       run: |
         .github/scripts/check-infra-dependencies.sh all
         make e2e-reset-db
         make e2e-serve-${{ matrix.fleet-tier }} &
         sleep 3
         make e2e-setup
-        yarn cypress run --config-file cypress-${{ matrix.fleet-tier }}.json --config video=false
+        yarn cypress run --config-file cypress-${{ matrix.fleet-tier }}.json
+
+    - name: Upload artifacts
+      if: failure()
+      uses: actions/upload-artifact@v2
+      with:
+        name: cypress
+        path: cypress/
 
 
   test-js:
