Clean up E2E testing configurations

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "prettier:check": "prettier --check frontend/**/*.{jsx,js,tsx,ts} ./cypress/**/*.{js,ts}",
     "test": "jest",
     "e2e-browser": "cypress open",
-    "e2e-browser:free": "yarn cypress open --config-file cypress-free.json",
-    "e2e-browser:premium": "yarn cypress open --config-file cypress-premium.json",
+    "e2e-browser:free": "yarn cypress open --config-file cypress/cypress-free.json",
+    "e2e-browser:premium": "yarn cypress open --config-file cypress/cypress-premium.json",
     "e2e-cli": "cypress run",
-    "e2e-cli:free": "yarn cypress run --config-file cypress-free.json",
-    "e2e-cli:premium": "yarn cypress run --config-file cypress-premium.json",
+    "e2e-cli:free": "yarn cypress run --config-file cypress/cypress-free.json",
+    "e2e-cli:premium": "yarn cypress run --config-file cypress/cypress-premium.json",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
