--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "isomorphic-fetch": "^3.0.0",
     "js-md5": "0.7.3",
     "js-yaml": "3",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "memoize-one": "^5",
     "nock": "^13.0.5",
     "node-bourbon": "4.2.8",
@@ -188,6 +188,7 @@
     "cypress-wait-until": "^1.7.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "esbuild-loader": "^2.17.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^15",
     "eslint-config-prettier": "^8.1.0",
