--- a/package.json
+++ b/package.json
@@ -180,7 +180,6 @@
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.2.1",
     "css-loader": "^1.0.1",
@@ -192,7 +191,6 @@
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^15",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-import-resolver-webpack": "0.10.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2",
     "eslint-plugin-jest": "20.0.3",
@@ -200,23 +198,17 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "expose-loader": "0.7.5",
     "file-loader": "^4.1.0",
+    "fork-ts-checker-webpack-plugin": "^6.5.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "ignore-styles": "5.0.1",
     "jest": "^26.6.3",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "jsdom": "^16.5.2",
-    "json-loader": "0.5.7",
     "mini-css-extract-plugin": "^0.7.0",
     "prettier": "2.2.1",
-    "raw-loader": "0.5.1",
     "regenerator-runtime": "^0.13.7",
     "sass-loader": "6.0.7",
-    "source-map-loader": "0.2.3",
-    "stacktrace-parser": "^0.1.10",
-    "style-loader": "0.21.0",
     "trace-unhandled": "^2.0.1",
     "ts-loader": "^6.0.4",
     "ts-node": "10.7.0",
