--- a/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
+++ b/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml
@@ -600,7 +600,6 @@ spec:
           condition:
             $javaclass
         }'
-      );"
+      );
   purpose: Detection
-  remediation: N/A
-  contributors: zwass
+  contributors: zwass,tgauda
