--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "@types/sockjs-client": "^1.5.1",
+    "@types/uuid": "^8.3.3",
     "ace-builds": "1.4.12",
     "autoprefixer": "^9.4.3",
     "axios": "^0.21.1",
@@ -69,6 +70,7 @@
     "sockjs-client": "^1.4.0",
     "sqlite-parser": "1.0.1",
     "use-debounce": "^7.0.0",
+    "uuid": "^8.3.2",
     "whatwg-fetch": "0.11.1",
     "when": "3.7.8"
   },
