--- a/.github/workflows/goreleaser-orbit.yaml
+++ b/.github/workflows/goreleaser-orbit.yaml
@@ -1,4 +1,4 @@
-name: goreleaser
+name: GoReleaser Orbit
 
 on:
   push:
@@ -34,11 +34,10 @@ jobs:
           go-version: 1.17.2
 
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@ac067437f516133269923265894e77920c3dce18 # v2.6.1
+        uses: goreleaser/goreleaser-action@5df302e5e9e4c66310a6b6493a8865b12c555af2 # v2.8.0
         with:
           distribution: goreleaser
-          version: latest
+          version: af4a8642bddb171914ee932bfb5768f102c3516f # 1.1.0
           args: release --rm-dist --snapshot -f orbit/.goreleaser.yml
         env:
-          GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
