--- a/.github/workflows/goreleaser-orbit.yaml
+++ b/.github/workflows/goreleaser-orbit.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: goreleaser/goreleaser-action@5df302e5e9e4c66310a6b6493a8865b12c555af2 # v2.8.0
         with:
           distribution: goreleaser
-          version: af4a8642bddb171914ee932bfb5768f102c3516f # 1.1.0
+          version: v1.1.0
           args: release --rm-dist --snapshot -f orbit/.goreleaser.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
