--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "cwd": "${fileDirname}",
             "env": {
                 "MYSQL_TEST": 1,
-                "REDIS_TEST": 1
+                "REDIS_TEST": 1,
+                "NETWORK_TEST": 1
             },
             "buildFlags": "-tags='full,fts5'",
             "program": "${fileDirname}"
@@ -25,7 +26,8 @@
             "cwd": "${fileDirname}",
             "env": {
                 "MYSQL_TEST": 1,
-                "REDIS_TEST": 1
+                "REDIS_TEST": 1,
+                "NETWORK_TEST": 1
             },
             "buildFlags": "-tags='full,fts5'",
             "program": "${file}"
