--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,6 +1,7 @@
 name: Deploy staging
 
 on:
+  workflow_dispatch:
   workflow_run:
     workflows:
     - Build binaries
@@ -8,6 +9,12 @@ on:
     - completed
 
 jobs:
+  echo:
+    runs-on: ubuntu-latest
+    steps:
+    - name: echo
+      run: echo '${{ github.event }}'
+
   on-success:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -19,18 +26,11 @@ jobs:
     - name: Download binaries
       uses: dawidd6/action-download-artifact@09385b76de790122f4da9c82b17bccf858b9557c #v2.16.0
       with:
-        workflow: Build binaries
+        run_id: ${{ github.event.workflow_run }}
         name: build
 
     - name: Start Fleet server
       run: |
         ./build/fleet prepare db --dev && ./build/fleet serve --dev --server_tls=false &
         npm install -g localtunnel && lt --port 8080
-    
-  # Nothing to do on failure
-  on-failure:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
-    steps:
-      - run: echo "Nothing to do on failure"
 
