--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Download binaries
       uses: dawidd6/action-download-artifact@09385b76de790122f4da9c82b17bccf858b9557c #v2.16.0
       with:
-        run_id: ${{ github.event.workflow_run }}
+        run_id: ${{ github.event.workflow_run.id }}
         name: build
 
     - name: Start Fleet server
