Try to fix triggers on staging action
debugging

--- a/.github/workflows/build-binaries.yaml
+++ b/.github/workflows/build-binaries.yaml
@@ -8,6 +8,12 @@ on:
   workflow_dispatch:
 
 jobs:
+  echo:
+    runs-on: ubuntu-latest
+    steps:
+    - name: echo event
+      run: echo '${{ toJson(github.event) }}'
+
   build-binaries:
     runs-on: ubuntu-latest
     steps:
