--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -20,7 +20,7 @@ jobs:
 
   on-pr:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.event == 'pull_request' && github.event.workflow_run.conclusion == 'success' }}
     steps:
     # Pre-starting dependencies here means they are ready to go when we need them.
     - name: Start Infra Dependencies
@@ -29,6 +29,7 @@ jobs:
     - name: Download binaries
       uses: dawidd6/action-download-artifact@09385b76de790122f4da9c82b17bccf858b9557c #v2.16.0
       with:
+        workflow: ${{ github.event.workflow.name }}
         run_id: ${{ github.event.workflow_run.id }}
         name: build
 
@@ -39,7 +40,7 @@ jobs:
 
   on-main:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.branch == 'main' }}
+    if: ${{ github.event.workflow_run.event == 'push' && github.event.workflow_run.head_branch == 'main' && github.event.workflow_run.conclusion == 'success' }}
     steps:
     # Pre-starting dependencies here means they are ready to go when we need them.
     - name: Start Infra Dependencies
