--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -9,12 +9,6 @@ on:
     - completed
 
 jobs:
-  echo:
-    runs-on: ubuntu-latest
-    steps:
-    - name: echo event
-      run: echo '${{ toJson(github.event) }}'
-
   on-pr:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.event == 'pull_request' && github.event.workflow_run.conclusion == 'success' }}
@@ -46,6 +40,7 @@ jobs:
     - name: Download binaries
       uses: dawidd6/action-download-artifact@09385b76de790122f4da9c82b17bccf858b9557c #v2.16.0
       with:
+        workflow: ${{ github.event.workflow.name }}
         branch: main
         name: build
 
