--- a/website/.eslintrc
+++ b/website/.eslintrc
@@ -44,7 +44,7 @@
     "User": true,
     "HistoricalUsageSnapshot": true,
     "Quote": true,
-    "Order": true,
+    "Subscription": true,
 
     // …and any others.
     // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
