Download artifact to build path in staging deploy

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -25,6 +25,7 @@ jobs:
         workflow: ${{ github.event.workflow.name }}
         run_id: ${{ github.event.workflow_run.id }}
         name: build
+        path: build
 
     - name: Start tunnel
       run: |
@@ -52,6 +53,7 @@ jobs:
         workflow: ${{ github.event.workflow.name }}
         branch: main
         name: build
+        path: build
 
     - name: Start tunnel
       run: |
