--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -19,3 +19,6 @@ jobs:
       run: |
         npm install -g fleetctl
         fleetctl preview
+        fleetctl get hosts | tee hosts.txt
+        [ $( cat hosts.txt | grep online | wc -l) -eq 8 ]
+
