--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -22,3 +22,14 @@ jobs:
     needs: gen-hostname
     steps:
     - run: echo ${{ needs.gen-hostname.outputs.uuid }}
+
+    - name: Download binaries
+      uses: dawidd6/action-download-artifact@09385b76de790122f4da9c82b17bccf858b9557c #v2.16.0
+      with:
+        workflow: Build binaries
+        branch: main
+        name: build
+        path: build
+
+    - name: Start Fleet server
+      run: ./build/fleetctl preview --no-hosts
