--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -43,3 +43,35 @@ jobs:
         ./build/fleetctl preview --no-hosts
         ./build/fleetctl config set --address https://fleet-preview-${{ needs.gen-hostname.outputs.uuid }}.loca.lt
         ./build/fleetctl get enroll-secret
+
+  wait-server:
+   runs-on: ubuntu-latest
+   needs: gen-hostname
+   steps:
+        # Download fleet and fleetctl binaries from last successful build on main
+    - name: Download binaries
+      uses: dawidd6/action-download-artifact@09385b76de790122f4da9c82b17bccf858b9557c #v2.16.0
+      with:
+        workflow: build-binaries.yaml
+        branch: main
+        name: build
+        path: build
+        check_artifacts: true
+    
+    - name: Attempt login
+      timeout-minutes: 5
+      run: |
+        ./build/fleetctl config set --address https://fleet-preview-${{ needs.gen-hostname.outputs.uuid }}.loca.lt
+        export EMAIL=admin@example.com PASSWORD=admin123#
+        until ./build/fleetctl login
+        do
+          echo "Retry"
+          sleep 5
+        done
+      
+  macos-job:
+   runs-on: macos-latest
+   needs: wait-server
+   steps:
+   - name: Step 1
+     run: npm install -g fleetctl
